[build-system]
requires = [
  "scikit-build-core",
  "wheel",
  "pybind11",
  "nanobind==2.4.0"
]

build-backend = "scikit_build_core.build"

[project]
name = "llvm-wheel"
version = "0.1.0"
description = "LLVM / MLIR runtime packaged as a Python wheel"
requires-python = ">=3.8"


[tool.scikit-build]
wheel.install-dir = "llvm_wheel"

cmake.source-dir = "."
build-dir = "build/cm_build_scikit"
build.verbose = true
cmake.args = [
  "-DLLVM_ENABLE_PROJECTS=mlir;llvm;lld",
  "-DLLVM_TARGETS_TO_BUILD=host;NVPTX;AMDGPU",
  "-DCMAKE_BUILD_TYPE=Release",
  "-DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
  "-DCMAKE_C_COMPILER=clang-16",
  "-DCMAKE_CXX_COMPILER=clang++-16",
  "-DLLVM_ENABLE_LLD=ON",
  "-DMLIR_ENABLE_BINDINGS_PYTHON=ON"]



